# pro-TBB_2019_CMake

./: .gitignore  .gitmodules  CMakeList_origin.txt  CMakeLists.txt  FindTBB.cmake  README.md  scripts.ipynb
AppB/: CMakeLists.txt
ch01/: CMakeLists.txt
ch02/: CMakeLists.txt
ch03/: CMakeLists.txt
ch04/: CMakeLists.txt
ch05/: CMakeLists.txt
ch06/: CMakeLists.txt
ch07/: CMakeLists.txt
ch10/: CMakeLists.txt
ch11/: CMakeLists.txt
ch12/: CMakeLists.txt
ch13/: CMakeLists.txt
ch14/: CMakeLists.txt
ch15/: CMakeLists.txt
ch16/: CMakeLists.txt
ch17/: CMakeLists.txt
ch18/: CMakeLists.txt
ch19/: CMakeLists.txt
ch19/HelloOpenCLNode/: CMakeLists.txt
ch19/TriadOpenCLNode/: CMakeLists.txt
ch20/: CMakeLists.txt
