# fig_B_66_enumerable_thread_specific.cpp
add_executable(fig_B_66_enumerable_thread_specific  fig_B_66_enumerable_thread_specific.cpp)
target_link_libraries(fig_B_66_enumerable_thread_specific  PRIVATE TBB::tbb)

# fig_B_69_tick_count.cpp
add_executable(fig_B_69_tick_count  fig_B_69_tick_count.cpp)
target_link_libraries(fig_B_69_tick_count  PRIVATE TBB::tbb)

# fig_B_64_combinable.cpp
add_executable(fig_B_64_combinable  fig_B_64_combinable.cpp)
target_link_libraries(fig_B_64_combinable  PRIVATE TBB::tbb)

# fig_B_48_fixed_pool.cpp
add_executable(fig_B_48_fixed_pool  fig_B_48_fixed_pool.cpp)
target_link_libraries(fig_B_48_fixed_pool  PRIVATE TBB::tbb)

# fig_B_60_mutex.cpp
add_executable(fig_B_60_mutex  fig_B_60_mutex.cpp)
target_link_libraries(fig_B_60_mutex  PRIVATE TBB::tbb)

# fig_B_43_fg.cpp
add_executable(fig_B_43_fg  fig_B_43_fg.cpp)
target_link_libraries(fig_B_43_fg  PRIVATE TBB::tbb)

# fig_B_08_parallel_do.cpp
add_executable(fig_B_08_parallel_do  fig_B_08_parallel_do.cpp)
target_link_libraries(fig_B_08_parallel_do  PRIVATE TBB::tbb)

# fig_B_24_parallel_deterministic_reduce.cpp
add_executable(fig_B_24_parallel_deterministic_reduce  fig_B_24_parallel_deterministic_reduce.cpp)
target_link_libraries(fig_B_24_parallel_deterministic_reduce  PRIVATE TBB::tbb)

# fig_B_21_parallel_pipeline.cpp
add_executable(fig_B_21_parallel_pipeline  fig_B_21_parallel_pipeline.cpp)
target_link_libraries(fig_B_21_parallel_pipeline  PRIVATE TBB::tbb)

# fig_B_15_parallel_for_each.cpp
add_executable(fig_B_15_parallel_for_each  fig_B_15_parallel_for_each.cpp)
target_link_libraries(fig_B_15_parallel_for_each  PRIVATE TBB::tbb)

# fig_B_78_exception_handling.cpp
add_executable(fig_B_78_exception_handling  fig_B_78_exception_handling.cpp)
target_link_libraries(fig_B_78_exception_handling  PRIVATE TBB::tbb)

# fig_B_23_parallel_reduce.cpp
add_executable(fig_B_23_parallel_reduce  fig_B_23_parallel_reduce.cpp)
target_link_libraries(fig_B_23_parallel_reduce  PRIVATE TBB::tbb)

# fig_B_62_atomic.cpp
add_executable(fig_B_62_atomic  fig_B_62_atomic.cpp)
target_link_libraries(fig_B_62_atomic  PRIVATE TBB::tbb)

# fig_B_11_parallel_for.cpp
add_executable(fig_B_11_parallel_for  fig_B_11_parallel_for.cpp)
target_link_libraries(fig_B_11_parallel_for  PRIVATE TBB::tbb)

# hw_tst.cpp
add_executable(hw_tst  hw_tst.cpp)
target_link_libraries(hw_tst  PRIVATE TBB::tbb)

# fig_B_12_parallel_for2.cpp
add_executable(fig_B_12_parallel_for2  fig_B_12_parallel_for2.cpp)
target_link_libraries(fig_B_12_parallel_for2  PRIVATE TBB::tbb)

# fig_B_73_task_scheduler_init.cpp
add_executable(fig_B_73_task_scheduler_init  fig_B_73_task_scheduler_init.cpp)
target_link_libraries(fig_B_73_task_scheduler_init  PRIVATE TBB::tbb)

# fig_B_33_pipeline.cpp
add_executable(fig_B_33_pipeline  fig_B_33_pipeline.cpp)
target_link_libraries(fig_B_33_pipeline  PRIVATE TBB::tbb)

# fig_B_27_parallel_scan.cpp
add_executable(fig_B_27_parallel_scan  fig_B_27_parallel_scan.cpp)
target_link_libraries(fig_B_27_parallel_scan  PRIVATE TBB::tbb)

# fig_B_48_memory_pool.cpp
add_executable(fig_B_48_memory_pool  fig_B_48_memory_pool.cpp)
target_link_libraries(fig_B_48_memory_pool  PRIVATE TBB::tbb)

# fig_B_68_flatten2d.cpp
add_executable(fig_B_68_flatten2d  fig_B_68_flatten2d.cpp)
target_link_libraries(fig_B_68_flatten2d  PRIVATE TBB::tbb)

# fig_B_71_task_group.cpp
add_executable(fig_B_71_task_group  fig_B_71_task_group.cpp)
target_link_libraries(fig_B_71_task_group  PRIVATE TBB::tbb)

# fig_B_30_parallel_sort.cpp
add_executable(fig_B_30_parallel_sort  fig_B_30_parallel_sort.cpp)
target_link_libraries(fig_B_30_parallel_sort  PRIVATE TBB::tbb)

# fig_B_17_parallel_invoke.cpp
add_executable(fig_B_17_parallel_invoke  fig_B_17_parallel_invoke.cpp)
target_link_libraries(fig_B_17_parallel_invoke  PRIVATE TBB::tbb)

# fig_B_81_parallel_STL.cpp
add_executable(fig_B_81_parallel_STL  fig_B_81_parallel_STL.cpp)
target_link_libraries(fig_B_81_parallel_STL  PRIVATE TBB::tbb)

