# fig_1_12.cpp
add_executable(fig_1_12  fig_1_12.cpp)
target_link_libraries(fig_1_12  PRIVATE TBB::tbb)

# fig_1_04.cpp
add_executable(fig_1_04  fig_1_04.cpp)
target_link_libraries(fig_1_04  PRIVATE TBB::tbb)

# sidebar_lambda.cpp
add_executable(sidebar_lambda  sidebar_lambda.cpp)
target_link_libraries(sidebar_lambda  PRIVATE TBB::tbb)

# fig_1_05.cpp
add_executable(fig_1_05  fig_1_05.cpp)
target_link_libraries(fig_1_05  PRIVATE TBB::tbb)

# sidebar_functor.cpp
add_executable(sidebar_functor  sidebar_functor.cpp)
target_link_libraries(sidebar_functor  PRIVATE TBB::tbb)

# fig_1_07.cpp
add_executable(fig_1_07  fig_1_07.cpp)
target_link_libraries(fig_1_07  PRIVATE TBB::tbb)

# fig_1_10.cpp
add_executable(fig_1_10  fig_1_10.cpp)
target_link_libraries(fig_1_10  PRIVATE TBB::tbb)

# fig_1_11.cpp
add_executable(fig_1_11  fig_1_11.cpp)
target_link_libraries(fig_1_11  PRIVATE TBB::tbb)

