# fig_2_11.cpp
add_executable(fig_2_11  fig_2_11.cpp)
target_link_libraries(fig_2_11  PRIVATE TBB::tbb)

# fig_2_22.cpp
add_executable(fig_2_22  fig_2_22.cpp)
target_link_libraries(fig_2_22  PRIVATE TBB::tbb)

# fig_2_30.cpp
add_executable(fig_2_30  fig_2_30.cpp)
target_link_libraries(fig_2_30  PRIVATE TBB::tbb)

# fig_2_12.cpp
add_executable(fig_2_12  fig_2_12.cpp)
target_link_libraries(fig_2_12  PRIVATE TBB::tbb)

# fig_2_19.cpp
add_executable(fig_2_19  fig_2_19.cpp)
target_link_libraries(fig_2_19  PRIVATE TBB::tbb)

# fig_2_07.cpp
add_executable(fig_2_07  fig_2_07.cpp)
target_link_libraries(fig_2_07  PRIVATE TBB::tbb)

# fig_2_24.cpp
add_executable(fig_2_24  fig_2_24.cpp)
target_link_libraries(fig_2_24  PRIVATE TBB::tbb)

# fig_2_18.cpp
add_executable(fig_2_18  fig_2_18.cpp)
target_link_libraries(fig_2_18  PRIVATE TBB::tbb)

# fig_2_08.cpp
add_executable(fig_2_08  fig_2_08.cpp)
target_link_libraries(fig_2_08  PRIVATE TBB::tbb)

# sidebar_associativity.cpp
add_executable(sidebar_associativity  sidebar_associativity.cpp)
target_link_libraries(sidebar_associativity  PRIVATE TBB::tbb)

# fig_2_27.cpp
add_executable(fig_2_27  fig_2_27.cpp)
target_link_libraries(fig_2_27  PRIVATE TBB::tbb)

# fig_2_10.cpp
add_executable(fig_2_10  fig_2_10.cpp)
target_link_libraries(fig_2_10  PRIVATE TBB::tbb)

# fig_2_06.cpp
add_executable(fig_2_06  fig_2_06.cpp)
target_link_libraries(fig_2_06  PRIVATE TBB::tbb)

# sidebar_pfor_functor.cpp
add_executable(sidebar_pfor_functor  sidebar_pfor_functor.cpp)
target_link_libraries(sidebar_pfor_functor  PRIVATE TBB::tbb)

# fig_2_23.cpp
add_executable(fig_2_23  fig_2_23.cpp)
target_link_libraries(fig_2_23  PRIVATE TBB::tbb)

# fig_2_16.cpp
add_executable(fig_2_16  fig_2_16.cpp)
target_link_libraries(fig_2_16  PRIVATE TBB::tbb)

# fig_2_04.cpp
add_executable(fig_2_04  fig_2_04.cpp)
target_link_libraries(fig_2_04  PRIVATE TBB::tbb)

# fig_2_17.cpp
add_executable(fig_2_17  fig_2_17.cpp)
target_link_libraries(fig_2_17  PRIVATE TBB::tbb)

# fig_2_28.cpp
add_executable(fig_2_28  fig_2_28.cpp)
target_link_libraries(fig_2_28  PRIVATE TBB::tbb)

# fig_2_14.cpp
add_executable(fig_2_14  fig_2_14.cpp)
target_link_libraries(fig_2_14  PRIVATE TBB::tbb)

# fig_2_15.cpp
add_executable(fig_2_15  fig_2_15.cpp)
target_link_libraries(fig_2_15  PRIVATE TBB::tbb)

# fig_2_20.cpp
add_executable(fig_2_20  fig_2_20.cpp)
target_link_libraries(fig_2_20  PRIVATE TBB::tbb)

# fig_2_05.cpp
add_executable(fig_2_05  fig_2_05.cpp)
target_link_libraries(fig_2_05  PRIVATE TBB::tbb)

# fig_2_03.cpp
add_executable(fig_2_03  fig_2_03.cpp)
target_link_libraries(fig_2_03  PRIVATE TBB::tbb)

