# fig_3_16.cpp
add_executable(fig_3_16  fig_3_16.cpp)
target_link_libraries(fig_3_16  PRIVATE TBB::tbb)

# fig_3_05.cpp
add_executable(fig_3_05  fig_3_05.cpp)
target_link_libraries(fig_3_05  PRIVATE TBB::tbb)

# fig_3_10.cpp
add_executable(fig_3_10  fig_3_10.cpp)
target_link_libraries(fig_3_10  PRIVATE TBB::tbb)

# fig_3_12.cpp
add_executable(fig_3_12  fig_3_12.cpp)
target_link_libraries(fig_3_12  PRIVATE TBB::tbb)

# fig_3_03.cpp
add_executable(fig_3_03  fig_3_03.cpp)
target_link_libraries(fig_3_03  PRIVATE TBB::tbb)

# fig_3_14.cpp
add_executable(fig_3_14  fig_3_14.cpp)
target_link_libraries(fig_3_14  PRIVATE TBB::tbb)

# fig_3_06.cpp
add_executable(fig_3_06  fig_3_06.cpp)
target_link_libraries(fig_3_06  PRIVATE TBB::tbb)

