# fig_4_04.cpp
add_executable(fig_4_04  fig_4_04.cpp)
target_link_libraries(fig_4_04  PRIVATE TBB::tbb)

# fig_4_08.cpp
add_executable(fig_4_08  fig_4_08.cpp)
target_link_libraries(fig_4_08  PRIVATE TBB::tbb)

# fig_4_09.cpp
add_executable(fig_4_09  fig_4_09.cpp)
target_link_libraries(fig_4_09  PRIVATE TBB::tbb)

# fig_4_12.cpp
add_executable(fig_4_12  fig_4_12.cpp)
target_link_libraries(fig_4_12  PRIVATE TBB::tbb)

# fig_4_11.cpp
add_executable(fig_4_11  fig_4_11.cpp)
target_link_libraries(fig_4_11  PRIVATE TBB::tbb)

# fig_4_13.cpp
add_executable(fig_4_13  fig_4_13.cpp)
target_link_libraries(fig_4_13  PRIVATE TBB::tbb)

# fig_4_10.cpp
add_executable(fig_4_10  fig_4_10.cpp)
target_link_libraries(fig_4_10  PRIVATE TBB::tbb)

