# fig_5_23.cpp
add_executable(fig_5_23  fig_5_23.cpp)
target_link_libraries(fig_5_23  PRIVATE TBB::tbb)

# fig_5_19.cpp
add_executable(fig_5_19  fig_5_19.cpp)
target_link_libraries(fig_5_19  PRIVATE TBB::tbb)

# fig_5_27-bis.cpp
add_executable(fig_5_27-bis  fig_5_27-bis.cpp)
target_link_libraries(fig_5_27-bis  PRIVATE TBB::tbb)

# fig_5_29.cpp
add_executable(fig_5_29  fig_5_29.cpp)
target_link_libraries(fig_5_29  PRIVATE TBB::tbb)

# fig_5_24.cpp
add_executable(fig_5_24  fig_5_24.cpp)
target_link_libraries(fig_5_24  PRIVATE TBB::tbb)

# fig_5_20.cpp
add_executable(fig_5_20  fig_5_20.cpp)
target_link_libraries(fig_5_20  PRIVATE TBB::tbb)

# fig_5_27.cpp
add_executable(fig_5_27  fig_5_27.cpp)
target_link_libraries(fig_5_27  PRIVATE TBB::tbb)

# fig_5_20_cacheAligned.cpp
add_executable(fig_5_20_cacheAligned  fig_5_20_cacheAligned.cpp)
target_link_libraries(fig_5_20_cacheAligned  PRIVATE TBB::tbb)

# fig_5_14.cpp
add_executable(fig_5_14  fig_5_14.cpp)
target_link_libraries(fig_5_14  PRIVATE TBB::tbb)

# fig_5_22.cpp
add_executable(fig_5_22  fig_5_22.cpp)
target_link_libraries(fig_5_22  PRIVATE TBB::tbb)

# fig_5_26.cpp
add_executable(fig_5_26  fig_5_26.cpp)
target_link_libraries(fig_5_26  PRIVATE TBB::tbb)

# fig_5_04.cpp
add_executable(fig_5_04  fig_5_04.cpp)
target_link_libraries(fig_5_04  PRIVATE TBB::tbb)

# fig_5_25.cpp
add_executable(fig_5_25  fig_5_25.cpp)
target_link_libraries(fig_5_25  PRIVATE TBB::tbb)

# fig_5_08.cpp
add_executable(fig_5_08  fig_5_08.cpp)
target_link_libraries(fig_5_08  PRIVATE TBB::tbb)

# fig_5_03.cpp
add_executable(fig_5_03  fig_5_03.cpp)
target_link_libraries(fig_5_03  PRIVATE TBB::tbb)

