# fig_6_12.cpp
add_executable(fig_6_12  fig_6_12.cpp)
target_link_libraries(fig_6_12  PRIVATE TBB::tbb)

# fig_6_09_STL.cpp
add_executable(fig_6_09_STL  fig_6_09_STL.cpp)
target_link_libraries(fig_6_09_STL  PRIVATE TBB::tbb)

# fig_6_10.cpp
add_executable(fig_6_10  fig_6_10.cpp)
target_link_libraries(fig_6_10  PRIVATE TBB::tbb)

# fig_6_06.cpp
add_executable(fig_6_06  fig_6_06.cpp)
target_link_libraries(fig_6_06  PRIVATE TBB::tbb)

# fig_6_11.cpp
add_executable(fig_6_11  fig_6_11.cpp)
target_link_libraries(fig_6_11  PRIVATE TBB::tbb)

# fig_6_01.cpp
add_executable(fig_6_01  fig_6_01.cpp)
target_link_libraries(fig_6_01  PRIVATE TBB::tbb)

