# wavefront_v4_recycle.cpp
add_executable(wavefront_v4_recycle  wavefront_v4_recycle.cpp)
target_link_libraries(wavefront_v4_recycle  PRIVATE TBB::tbb)

# fig_10_04.cpp
add_executable(fig_10_04  fig_10_04.cpp)
target_link_libraries(fig_10_04  PRIVATE TBB::tbb)

# wavefront_v0_DAG.cpp
add_executable(wavefront_v0_DAG  wavefront_v0_DAG.cpp)
target_link_libraries(wavefront_v0_DAG  PRIVATE TBB::tbb)

# wavefront_v6_global.cpp
add_executable(wavefront_v6_global  wavefront_v6_global.cpp)
target_link_libraries(wavefront_v6_global  PRIVATE TBB::tbb)

# fig_10_08.cpp
add_executable(fig_10_08  fig_10_08.cpp)
target_link_libraries(fig_10_08  PRIVATE TBB::tbb)

# fig_10_11.cpp
add_executable(fig_10_11  fig_10_11.cpp)
target_link_libraries(fig_10_11  PRIVATE TBB::tbb)

# wavefront_v2_feeder.cpp
add_executable(wavefront_v2_feeder  wavefront_v2_feeder.cpp)
target_link_libraries(wavefront_v2_feeder  PRIVATE TBB::tbb)

# fig_10_11-bypass.cpp
add_executable(fig_10_11-bypass  fig_10_11-bypass.cpp)
target_link_libraries(fig_10_11-bypass  PRIVATE TBB::tbb)

# fig_10_06.cpp
add_executable(fig_10_06  fig_10_06.cpp)
target_link_libraries(fig_10_06  PRIVATE TBB::tbb)

# wavefront_v1_addchild.cpp
add_executable(wavefront_v1_addchild  wavefront_v1_addchild.cpp)
target_link_libraries(wavefront_v1_addchild  PRIVATE TBB::tbb)

# fig_10_15.cpp
add_executable(fig_10_15  fig_10_15.cpp)
target_link_libraries(fig_10_15  PRIVATE TBB::tbb)

# wavefront_v5_locality.cpp
add_executable(wavefront_v5_locality  wavefront_v5_locality.cpp)
target_link_libraries(wavefront_v5_locality  PRIVATE TBB::tbb)

# wavefront_v3_blockstyle.cpp
add_executable(wavefront_v3_blockstyle  wavefront_v3_blockstyle.cpp)
target_link_libraries(wavefront_v3_blockstyle  PRIVATE TBB::tbb)

