# fig_11_10.cpp
add_executable(fig_11_10  fig_11_10.cpp)
target_link_libraries(fig_11_10  PRIVATE TBB::tbb)

# fig_11_06.cpp
add_executable(fig_11_06  fig_11_06.cpp)
target_link_libraries(fig_11_06  PRIVATE TBB::tbb)

# fig_11_08.cpp
add_executable(fig_11_08  fig_11_08.cpp)
target_link_libraries(fig_11_08  PRIVATE TBB::tbb)

# fig_11_15.cpp
add_executable(fig_11_15  fig_11_15.cpp)
target_link_libraries(fig_11_15  PRIVATE TBB::tbb)

# fig_11_14.cpp
add_executable(fig_11_14  fig_11_14.cpp)
target_link_libraries(fig_11_14  PRIVATE TBB::tbb)

# fig_11_12.cpp
add_executable(fig_11_12  fig_11_12.cpp)
target_link_libraries(fig_11_12  PRIVATE TBB::tbb)

# fig_11_16.cpp
add_executable(fig_11_16  fig_11_16.cpp)
target_link_libraries(fig_11_16  PRIVATE TBB::tbb)

# fig_11_05.cpp
add_executable(fig_11_05  fig_11_05.cpp)
target_link_libraries(fig_11_05  PRIVATE TBB::tbb)

# fig_11_07.cpp
add_executable(fig_11_07  fig_11_07.cpp)
target_link_libraries(fig_11_07  PRIVATE TBB::tbb)

