# fig_12_01.cpp
add_executable(fig_12_01  fig_12_01.cpp)
target_link_libraries(fig_12_01  PRIVATE TBB::tbb)

# fig_12_10.cpp
add_executable(fig_12_10  fig_12_10.cpp)
target_link_libraries(fig_12_10  PRIVATE TBB::tbb)

# fig_12_05.cpp
add_executable(fig_12_05  fig_12_05.cpp)
target_link_libraries(fig_12_05  PRIVATE TBB::tbb)

# fig_12_04.cpp
add_executable(fig_12_04  fig_12_04.cpp)
target_link_libraries(fig_12_04  PRIVATE TBB::tbb)

# fig_12_09.cpp
add_executable(fig_12_09  fig_12_09.cpp)
target_link_libraries(fig_12_09  PRIVATE TBB::tbb)

# fig_12_03.cpp
add_executable(fig_12_03  fig_12_03.cpp)
target_link_libraries(fig_12_03  PRIVATE TBB::tbb)

# fig_12_11.cpp
add_executable(fig_12_11  fig_12_11.cpp)
target_link_libraries(fig_12_11  PRIVATE TBB::tbb)

# fig_12_12.cpp
add_executable(fig_12_12  fig_12_12.cpp)
target_link_libraries(fig_12_12  PRIVATE TBB::tbb)

# fig_12_06.cpp
add_executable(fig_12_06  fig_12_06.cpp)
target_link_libraries(fig_12_06  PRIVATE TBB::tbb)

# fig_12_07.cpp
add_executable(fig_12_07  fig_12_07.cpp)
target_link_libraries(fig_12_07  PRIVATE TBB::tbb)

