# fig_13_05.cpp
add_executable(fig_13_05  fig_13_05.cpp)
target_link_libraries(fig_13_05  PRIVATE TBB::tbb)

# fig_13_03.cpp
add_executable(fig_13_03  fig_13_03.cpp)
target_link_libraries(fig_13_03  PRIVATE TBB::tbb)

# fig_13_01.cpp
add_executable(fig_13_01  fig_13_01.cpp)
target_link_libraries(fig_13_01  PRIVATE TBB::tbb)

