# fig_14_03.cpp
add_executable(fig_14_03  fig_14_03.cpp)
target_link_libraries(fig_14_03  PRIVATE TBB::tbb)

# fig_14_02.cpp
add_executable(fig_14_02  fig_14_02.cpp)
target_link_libraries(fig_14_02  PRIVATE TBB::tbb)

# fig_14_04.cpp
add_executable(fig_14_04  fig_14_04.cpp)
target_link_libraries(fig_14_04  PRIVATE TBB::tbb)

