# fig_15_01.cpp
add_executable(fig_15_01  fig_15_01.cpp)
target_link_libraries(fig_15_01  PRIVATE TBB::tbb)

# fig_15_11.cpp
add_executable(fig_15_11  fig_15_11.cpp)
target_link_libraries(fig_15_11  PRIVATE TBB::tbb)

# fig_15_03.cpp
add_executable(fig_15_03  fig_15_03.cpp)
target_link_libraries(fig_15_03  PRIVATE TBB::tbb)

# fig_15_02.cpp
add_executable(fig_15_02  fig_15_02.cpp)
target_link_libraries(fig_15_02  PRIVATE TBB::tbb)

# fig_15_12.cpp
add_executable(fig_15_12  fig_15_12.cpp)
target_link_libraries(fig_15_12  PRIVATE TBB::tbb)

# fig_15_09.cpp
add_executable(fig_15_09  fig_15_09.cpp)
target_link_libraries(fig_15_09  PRIVATE TBB::tbb)

# note_exceptions.cpp
add_executable(note_exceptions  note_exceptions.cpp)
target_link_libraries(note_exceptions  PRIVATE TBB::tbb)

