# fig_16_22.cpp
add_executable(fig_16_22  fig_16_22.cpp)
target_link_libraries(fig_16_22  PRIVATE TBB::tbb)

# fig_16_14.cpp
add_executable(fig_16_14  fig_16_14.cpp)
target_link_libraries(fig_16_14  PRIVATE TBB::tbb)

# fig_16_21.cpp
add_executable(fig_16_21  fig_16_21.cpp)
target_link_libraries(fig_16_21  PRIVATE TBB::tbb)

# fig_16_25.cpp
add_executable(fig_16_25  fig_16_25.cpp)
target_link_libraries(fig_16_25  PRIVATE TBB::tbb)

# fig_16_24.cpp
add_executable(fig_16_24  fig_16_24.cpp)
target_link_libraries(fig_16_24  PRIVATE TBB::tbb)

# fig_16_09.cpp
add_executable(fig_16_09  fig_16_09.cpp)
target_link_libraries(fig_16_09  PRIVATE TBB::tbb)

# fig_16_19.cpp
add_executable(fig_16_19  fig_16_19.cpp)
target_link_libraries(fig_16_19  PRIVATE TBB::tbb)

# fig_16_11.cpp
add_executable(fig_16_11  fig_16_11.cpp)
target_link_libraries(fig_16_11  PRIVATE TBB::tbb)

# fig_16_16.cpp
add_executable(fig_16_16  fig_16_16.cpp)
target_link_libraries(fig_16_16  PRIVATE TBB::tbb)

# fig_16_23.cpp
add_executable(fig_16_23  fig_16_23.cpp)
target_link_libraries(fig_16_23  PRIVATE TBB::tbb)

# fig_16_04.cpp
add_executable(fig_16_04  fig_16_04.cpp)
target_link_libraries(fig_16_04  PRIVATE TBB::tbb)

# fig_16_17.cpp
add_executable(fig_16_17  fig_16_17.cpp)
target_link_libraries(fig_16_17  PRIVATE TBB::tbb)

# fig_16_26.cpp
add_executable(fig_16_26  fig_16_26.cpp)
target_link_libraries(fig_16_26  PRIVATE TBB::tbb)

# fig_16_06.cpp
add_executable(fig_16_06  fig_16_06.cpp)
target_link_libraries(fig_16_06  PRIVATE TBB::tbb)

# fig_16_20.cpp
add_executable(fig_16_20  fig_16_20.cpp)
target_link_libraries(fig_16_20  PRIVATE TBB::tbb)

