# fig_17_10.cpp
add_executable(fig_17_10  fig_17_10.cpp)
target_link_libraries(fig_17_10  PRIVATE TBB::tbb)

# fig_17_17.cpp
add_executable(fig_17_17  fig_17_17.cpp)
target_link_libraries(fig_17_17  PRIVATE TBB::tbb)

# fig_17_12.cpp
add_executable(fig_17_12  fig_17_12.cpp)
target_link_libraries(fig_17_12  PRIVATE TBB::tbb)

# fig_17_08.cpp
add_executable(fig_17_08  fig_17_08.cpp)
target_link_libraries(fig_17_08  PRIVATE TBB::tbb)

# fig_17_02.cpp
add_executable(fig_17_02  fig_17_02.cpp)
target_link_libraries(fig_17_02  PRIVATE TBB::tbb)

# fig_17_03.cpp
add_executable(fig_17_03  fig_17_03.cpp)
target_link_libraries(fig_17_03  PRIVATE TBB::tbb)

# fig_17_13.cpp
add_executable(fig_17_13  fig_17_13.cpp)
target_link_libraries(fig_17_13  PRIVATE TBB::tbb)

# fig_17_33.cpp
add_executable(fig_17_33  fig_17_33.cpp)
target_link_libraries(fig_17_33  PRIVATE TBB::tbb)

# fig_17_21.cpp
add_executable(fig_17_21  fig_17_21.cpp)
target_link_libraries(fig_17_21  PRIVATE TBB::tbb)

# fig_17_16.cpp
add_executable(fig_17_16  fig_17_16.cpp)
target_link_libraries(fig_17_16  PRIVATE TBB::tbb)

# fig_17_27.cpp
add_executable(fig_17_27  fig_17_27.cpp)
target_link_libraries(fig_17_27  PRIVATE TBB::tbb)

# fig_17_05.cpp
add_executable(fig_17_05  fig_17_05.cpp)
target_link_libraries(fig_17_05  PRIVATE TBB::tbb)

# fig_17_11.cpp
add_executable(fig_17_11  fig_17_11.cpp)
target_link_libraries(fig_17_11  PRIVATE TBB::tbb)

# fig_17_15.cpp
add_executable(fig_17_15  fig_17_15.cpp)
target_link_libraries(fig_17_15  PRIVATE TBB::tbb)

# fig_17_31.cpp
add_executable(fig_17_31  fig_17_31.cpp)
target_link_libraries(fig_17_31  PRIVATE TBB::tbb)

# fig_17_28.cpp
add_executable(fig_17_28  fig_17_28.cpp)
target_link_libraries(fig_17_28  PRIVATE TBB::tbb)

# fig_17_09.cpp
add_executable(fig_17_09  fig_17_09.cpp)
target_link_libraries(fig_17_09  PRIVATE TBB::tbb)

# fig_17_01.cpp
add_executable(fig_17_01  fig_17_01.cpp)
target_link_libraries(fig_17_01  PRIVATE TBB::tbb)

# fig_17_19.cpp
add_executable(fig_17_19  fig_17_19.cpp)
target_link_libraries(fig_17_19  PRIVATE TBB::tbb)

# fig_17_23.cpp
add_executable(fig_17_23  fig_17_23.cpp)
target_link_libraries(fig_17_23  PRIVATE TBB::tbb)

# fig_17_30.cpp
add_executable(fig_17_30  fig_17_30.cpp)
target_link_libraries(fig_17_30  PRIVATE TBB::tbb)

# fig_17_26.cpp
add_executable(fig_17_26  fig_17_26.cpp)
target_link_libraries(fig_17_26  PRIVATE TBB::tbb)

# fig_17_04.cpp
add_executable(fig_17_04  fig_17_04.cpp)
target_link_libraries(fig_17_04  PRIVATE TBB::tbb)

# fig_17_22.cpp
add_executable(fig_17_22  fig_17_22.cpp)
target_link_libraries(fig_17_22  PRIVATE TBB::tbb)

