# fig_19_21.cpp
add_executable(fig_19_21  fig_19_21.cpp)
target_link_libraries(fig_19_21  PRIVATE TBB::tbb)

# fig_19_16.cpp
add_executable(fig_19_16  fig_19_16.cpp)
target_link_libraries(fig_19_16  PRIVATE TBB::tbb)

# fig_19_07.cpp
add_executable(fig_19_07  fig_19_07.cpp)
target_link_libraries(fig_19_07  PRIVATE TBB::tbb)

# fig_19_08.cpp
add_executable(fig_19_08  fig_19_08.cpp)
target_link_libraries(fig_19_08  PRIVATE TBB::tbb)

# fig_19_24.cpp
add_executable(fig_19_24  fig_19_24.cpp)
target_link_libraries(fig_19_24  PRIVATE TBB::tbb)

# fig_19_03.cpp
add_executable(fig_19_03  fig_19_03.cpp)
target_link_libraries(fig_19_03  PRIVATE TBB::tbb)

# fig_19_27.cpp
add_executable(fig_19_27  fig_19_27.cpp)
target_link_libraries(fig_19_27  PRIVATE TBB::tbb)

# fig_19_05.cpp
add_executable(fig_19_05  fig_19_05.cpp)
target_link_libraries(fig_19_05  PRIVATE TBB::tbb)

# fig_19_16-subbuffer.cpp
add_executable(fig_19_16-subbuffer  fig_19_16-subbuffer.cpp)
target_link_libraries(fig_19_16-subbuffer  PRIVATE TBB::tbb)

# fig_19_09.cpp
add_executable(fig_19_09  fig_19_09.cpp)
target_link_libraries(fig_19_09  PRIVATE TBB::tbb)

# fig_19_26.cpp
add_executable(fig_19_26  fig_19_26.cpp)
target_link_libraries(fig_19_26  PRIVATE TBB::tbb)

# fig_19_22.cpp
add_executable(fig_19_22  fig_19_22.cpp)
target_link_libraries(fig_19_22  PRIVATE TBB::tbb)

