# fig_20_05.cpp
add_executable(fig_20_05  fig_20_05.cpp)
target_link_libraries(fig_20_05  PRIVATE TBB::tbb)

# fig_20_10.cpp
add_executable(fig_20_10  fig_20_10.cpp)
target_link_libraries(fig_20_10  PRIVATE TBB::tbb)

# fig_20_06.cpp
add_executable(fig_20_06  fig_20_06.cpp)
target_link_libraries(fig_20_06  PRIVATE TBB::tbb)

